# toonana

./: CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: comic.rs  database.rs  gemini.rs  lib.rs  main.rs  ollama.rs  settings.rs  utils.rs
src/components/: AvatarModal.tsx  ComicProgressModal.tsx  EntriesSidebar.css  EntriesSidebar.tsx  GalleryModal.tsx  MarkdownEditor.css  MarkdownEditor.tsx  SettingsModal.tsx
src/components/ui/: button.tsx  scroll-area.tsx
src/hooks/: useAutosave.ts  useKeyboardShortcuts.ts
